<resources>
    <string name="app_name">ZomatoCloneUser</string>
    <string name="phone_number_Text">Phone Number</string>
    <string name="continue_Text">Continue</string>
    <string name="india_s_1_food_delivery_nand_dining_app_Text">India\'s #1 Food Delivery \nand Dining App</string>
    <string name="login_in_or_sign_up_Text">_______ Login in or Sign Up ________</string>
    <string name="login_page_image_Text">Login Page Image</string>
    <string name="MOBILE_NO_PATTERN">^[6-9][0-9]{9}$</string>
    <string name="Not_Valid_Mobile_No">Enter a valid Mobile Number!</string>
    <string name="exception_1">Unable To Send Code!</string>
    <string name="exception_2"> EXCEPTION IN SEND OTP TO THE USER !</string>
    <string name="country_code_Text">+91</string>
    <string name="otp_verification_Text">OTP Verification</string>
    <string name="we_have_sent_a_verification_code_to_Text">We have sent a verification code to</string>
    <string name="verify_Text">Verify</string>
    <string name="by_continuing_you_agree_to_our_n_terms_of_service_privacy_policy_content_policy_Text">By continuing, you agree to our\n Terms of Service Privacy Policy Content Policy</string>
    <string name="LayoutName_One">Home</string>
    <string name="LayoutName_Two">History</string>
    <string name="area_Text">Area</string>
    <string name="city_Text">City</string>
    <string name="zomato_Text">Zomato</string>
    <string name="location_icon_Label">Location Icon</string>
    <string name="profileIconLabel_Text">ProfileIconLabel</string>
    <string name="search_Text">Search</string>
    <string name="eat_a_lot_today_n_and_again_tomorrow_Text">Eat a lot today \n(and again tomorrow 🤫).</string>
    <string name="ValidOTP_Error_Text">Enter a valid OTP!</string>
    <string name="LoginStatus1">Logged In.</string>
    <string name="LoginStatus_2">failed</string>
    <string name="LocationPermissionDialogTitle">Location Permission Required!</string>
    <string name="ReasonForLocationPermission">\"Please enable device location to ensure accurate address and fast delivery \"</string>
    <string name="EnableLocationBtn_Text">Enable location permission</string>
    <string name="package_Text">package</string>
    <string name="non_veg_Text">Non Veg</string>
    <string name="ratings_4_0_Text">Ratings 4.0+</string>
    <string name="pure_veg_Text">Pure Veg</string>
    <string name="great_offers_Text">Great Offers</string>
    <string name="fastDelivery_Text">FastDelivery</string>
    <string name="we_don_t_have_your_location_yet_n_Text">We don\'t have your location, Yet!\n</string>
    <string name="set_your_location_to_start_exploring_n_restaurants_near_you_Text">Set your location to start exploring\n restaurants near you</string>
    <string name="enable_location_permission_Text">Enable Location permission</string>
    <string name="we_only_access_your_precise_location_while_you_are_using_n_the_app_to_improve_your_experience_Text">We only access your precise location while you are using\n the app to improve your experience.</string>
    <string name="location_permission_Text">Location permission !</string>
    <string name="one_step_more_Text">One Step More:</string>
    <string name="enter_your_name_Text">Enter Your Name</string>
    <string name="next_Text">Next</string>
    <string name="feature_items_Text">Feature Items:</string>
    <string name="restaurants_around_you_Text">restaurants around you</string>
    <string name="hotelName_Text">Hotel Name</string>
    <string name="Ratings_Text">5.5</string>
    <string name="delivery_time_Text">Delivery Time</string>
    <string name="price_Text">Price</string>
    <string name="food_pic_Text">FoodPicture</string>
    <string name="type_of_foods_Text">Type Of Foods</string>
    <string name="price_for_one_Text">Price For One</string>
    <string name="hotel_name_Text">Hotel Name</string>
    <string name="address_Text">address</string>
    <string name="userName_Text">userName</string>
    <string name="userDataBase_Text">userDataBase</string>
    <string name="Exception_3">Failed to add! Check your Internet.</string>
    <string name="Zomato_Text">Zomato</string>
    <string name="Exit_Text">Do you want to exit ?</string>
    <string name="Yes_Text">Yes</string>
    <string name="No_Text">No</string>
</resources>