<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H_220dp"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/H_110dp"
                android:background="@color/white">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:stretchColumns="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/secular_regular"
                        android:text="@string/zomato_Text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/TS_18sp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="@dimen/P_4dp">

                        <ImageView
                            android:layout_width="@dimen/W_35dp"
                            android:layout_height="@dimen/H_35dp"
                            android:contentDescription="@string/location_icon_Label"
                            android:src="@drawable/location_ic" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/Area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/dm_bold"
                                android:gravity="center"
                                android:paddingStart="@dimen/P_6dp"
                                android:text="@string/area_Text"
                                android:textColor="@color/black"
                                app:drawableEndCompat="@drawable/down_ic"
                                tools:ignore="RtlSymmetry" />

                            <TextView
                                android:id="@+id/City"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/dm_bold"
                                android:paddingStart="@dimen/P_6dp"
                                android:text="@string/city_Text"
                                android:textColor="@color/lightWhite"
                                tools:ignore="RtlSymmetry" />

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/W_50dp"
                            android:layout_height="@dimen/H_50dp"
                            android:layout_marginTop="@dimen/M_4dp"
                            android:layout_marginEnd="@dimen/M_30dp"
                            android:layout_marginBottom="@dimen/M_4dp"
                            android:backgroundTint="@color/neonWhite"
                            android:elevation="@dimen/E_2dp"
                            app:cardCornerRadius="@dimen/R_90dp">

                            <ImageView
                                android:layout_width="@dimen/W_50dp"
                                android:layout_height="@dimen/H_36dp"
                                android:layout_gravity="center"
                                android:clickable="true"
                                android:contentDescription="@string/profileIconLabel_Text"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_baseline_person_24" />

                        </androidx.cardview.widget.CardView>

                    </TableRow>


                </TableLayout>

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="@dimen/W_340dp"
                android:layout_height="@dimen/H_110dp"
                android:layout_gravity="bottom|center"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/NormalTextFields"
                    android:layout_width="@dimen/W_300dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/P_4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_Text" />
                </com.google.android.material.textfield.TextInputLayout>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scrollbars="none">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/P_20dp"
                        tools:ignore="RtlSymmetry">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/E_2dp"
                            android:text="@string/fastDelivery_Text"
                            app:chipCornerRadius="@dimen/R_6dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/Offers"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/E_2dp"
                            android:text="@string/great_offers_Text"
                            app:chipCornerRadius="@dimen/R_6dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/Veg"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/E_2dp"
                            android:text="@string/pure_veg_Text"
                            app:chipCornerRadius="@dimen/R_6dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/Ratings"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/E_2dp"
                            android:text="@string/ratings_4_0_Text"
                            app:chipCornerRadius="@dimen/R_6dp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/NonVeg"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="@dimen/E_2dp"
                            android:text="@string/non_veg_Text"
                            app:chipCornerRadius="@dimen/R_6dp" />

                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/Content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:minHeight="@dimen/H_400dp"
            tools:context=".Dashboard">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/LayoutForFragments"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/BottomNav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/H_45dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:tabIconTint="@drawable/bottom_navbar_item_background"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorGravity="top"
        app:tabInlineLabel="true"
        app:tabSelectedTextColor="?attr/colorPrimary"
        app:tabTextAppearance="@style/tabText"
        app:tabTextColor="?attr/colorPrimaryVariant">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </com.google.android.material.tabs.TabLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>