<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:id="@+id/Login_Activity"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/H_300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView2"
                android:background="?attr/colorOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_page_image_Text"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/background_1" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/H_400dp"
        android:background="?attr/colorOnPrimary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutForNumbers"
            style="@style/NormalTextFields"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415"
            app:startIconDrawable="@drawable/phone_ic"
            app:startIconTint="?attr/colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:textColor="?attr/colorPrimaryVariant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_Text"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/NormalButtons"
            android:layout_margin="@dimen/M_4dp"
            android:text="@string/continue_Text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutForNumbers"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_bold"
            android:text="@string/india_s_1_food_delivery_nand_dining_app_Text"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/TS_24sp"
            app:layout_constraintBottom_toTopOf="@+id/layoutForNumbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_bold"
            android:text="@string/login_in_or_sign_up_Text"
            android:textColor="@color/lightWhite"
            android:textSize="@dimen/TS_12sp"
            app:layout_constraintBottom_toTopOf="@+id/layoutForNumbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.571" />

        <ProgressBar
            android:id="@+id/loadingTimeToSendOTP"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            app:layout_constraintVertical_bias="0.127" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_semi_bold"
            android:lineSpacingExtra="@dimen/LineSpacing_4sp"
            android:text="@string/by_continuing_you_agree_to_our_n_terms_of_service_privacy_policy_content_policy_Text"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/TS_10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            app:layout_constraintVertical_bias="0.943" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>